2005-01-08 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk.hs: commit the grand hierarchical namespace
	conversion. If it all goes wrong, revert back to the tag
	'pre-hierarchical-names-conversion'.

	* gtk/Graphics/UI/Gtk/Abstract/Bin.chs,
	gtk/Graphics/UI/Gtk/Abstract/Box.chs,
	gtk/Graphics/UI/Gtk/Abstract/ButtonBox.chs.pp,
	gtk/Graphics/UI/Gtk/Abstract/Container.chs,
	gtk/Graphics/UI/Gtk/Abstract/Misc.chs,
	gtk/Graphics/UI/Gtk/Abstract/Object.chs.pp,
	gtk/Graphics/UI/Gtk/Abstract/Paned.chs.pp,
	gtk/Graphics/UI/Gtk/Abstract/Range.chs,
	gtk/Graphics/UI/Gtk/Abstract/Scale.chs,
	gtk/Graphics/UI/Gtk/Abstract/Scrollbar.hs,
	gtk/Graphics/UI/Gtk/Abstract/Separator.hs,
	gtk/Graphics/UI/Gtk/Abstract/Widget.chs: add abstract category

	* gtk/Graphics/UI/Gtk/Buttons/Button.chs.pp,
	gtk/Graphics/UI/Gtk/Buttons/CheckButton.chs,
	gtk/Graphics/UI/Gtk/Buttons/RadioButton.chs,
	gtk/Graphics/UI/Gtk/Buttons/ToggleButton.chs: button category
	
	* gtk/Graphics/UI/Gtk/Display/AccelLabel.chs,
	gtk/Graphics/UI/Gtk/Display/Image.chs,
	gtk/Graphics/UI/Gtk/Display/Label.chs,
	gtk/Graphics/UI/Gtk/Display/ProgressBar.chs,
	gtk/Graphics/UI/Gtk/Display/Statusbar.chs: display category

	* gtk/Graphics/UI/Gtk/Embedding/Embedding.hsc,
	gtk/Graphics/UI/Gtk/Embedding/Plug.chs,
	gtk/Graphics/UI/Gtk/Embedding/Socket.chs: embedding category

	* gtk/Graphics/UI/Gtk/Entry/Editable.chs.pp,
	gtk/Graphics/UI/Gtk/Entry/Entry.chs.pp,
	gtk/Graphics/UI/Gtk/Entry/EntryCompletion.chs.pp,
	gtk/Graphics/UI/Gtk/Entry/HScale.chs,
	gtk/Graphics/UI/Gtk/Entry/SpinButton.chs,
	gtk/Graphics/UI/Gtk/Entry/VScale.chs: entry category

	* gtk/Graphics/UI/Gtk/Gdk/DrawWindow.hs,
	gtk/Graphics/UI/Gtk/Gdk/Drawable.chs.pp,
	gtk/Graphics/UI/Gtk/Gdk/Enums.chs,
	gtk/Graphics/UI/Gtk/Gdk/Events.hsc,
	gtk/Graphics/UI/Gtk/Gdk/GC.chs,
	gtk/Graphics/UI/Gtk/Gdk/Gdk.chs,
	gtk/Graphics/UI/Gtk/Gdk/Keys.chs,
	gtk/Graphics/UI/Gtk/Gdk/Pixbuf.chs,
	gtk/Graphics/UI/Gtk/Gdk/Region.chs.pp: gdk category
